--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-channels:
-- defaults
-- conda-forge
-dependencies:
-- python=3.8.5
-- pip
-- pip:
-  - mlflow
-  - scikit-learn==0.23.2
-  - cloudpickle==1.6.0
-name: mlflow-env
+appdirs==1.4.4
+brotlipy==0.7.0
+mkl-fft==1.3.1
+mkl-service==2.4.0
+ply==3.11
+PyQt5==5.15.7
+pywin32==305.1
+scipy==1.10.0
+webencodings==0.5.1
+wincertstore==0.2  
